--- a/frontend/landingPage/src/style/Aurora.css
+++ b/frontend/landingPage/src/style/Aurora.css
@@ -200,7 +200,6 @@ button {
     align-items: center;
     padding-top: 2rem;
     text-align: center;
-    min-height: 100vh;
   }
   .phone-container {
     position: static;
@@ -246,7 +245,7 @@ button {
     font-size: 1rem;
   }
   .video-section video {
-    width: 100vw;
-    max-width: 100vh;
+    width: 150vw;
+    height: 100vh;
   }
 }
