--- a/frontend/landingPage/src/style/Aurora.css
+++ b/frontend/landingPage/src/style/Aurora.css
@@ -185,7 +185,6 @@ button {
   position: relative;
   margin-top: 6rem;
   padding: 2rem;
-  margin-bottom: 0;
   background: #000;
   display: flex;
   flex-direction: column;
@@ -245,7 +244,8 @@ button {
     font-size: 1rem;
   }
   .video-section video {
-    width: 150vw;
-    height: 100vh;
+    width: 200%;
+    height: 200%;
+    margin-bottom: 40%;
   }
 }
