--- a/frontend/landingPage/src/style/Aurora.css
+++ b/frontend/landingPage/src/style/Aurora.css
@@ -41,9 +41,9 @@ header h1 {
 
 /* ================== AURORA ================== */
 .aurora-container {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   z-index: 1;
